# RustyVault

./: .gitignore  Cargo.toml  PARITY_DIFFERENCES.md  README.md  RomVault3cfg.xmlbackup  test_xml.rs
crates/compress/: Cargo.toml  build.rs
crates/compress/src/: archive_extract.rs  codepage_437.rs  compress_utils.rs  crc.rs  crc_stream.rs  error.rs  file_header.rs  gzip_file.rs  i_compress.rs  lib.rs  native_zlib.rs  raw_file.rs  reporter.rs  seven_zip.rs  seven_zip_util.rs  structured_archive.rs  zip_enums.rs  zip_extra_field.rs  zip_file.rs  zstd_config.rs
crates/compress/src/gzip_file/: impl.rs
crates/compress/src/seven_zip/: icompress_impl.rs  impl.rs  internals.rs  marker.rs  read_support.rs  write_support.rs
crates/compress/src/tests/: archive_extract_tests.rs  gzip_file_tests.rs  seven_zip_tests.rs  zip_file_tests.rs
crates/compress/src/zip_file/: fake_and_rollback.rs  icompress_impl.rs  impl.rs  read_support.rs  write_stream.rs  zip_file_internal.rs
crates/compress/src/zip_file/zip_file_internal/: manual_writer.rs
crates/dir2dat/: Cargo.toml
crates/dir2dat/src/: main.rs
crates/rom_vault/: Cargo.toml
crates/rom_vault/src/: main.rs
crates/rom_vault/src/tests/: main_tests.rs
crates/romvault_ui/: Cargo.toml  build.rs
crates/romvault_ui/src/: app_actions.rs  app_artwork.rs  app_sam.rs  app_update.rs  assets.rs  central_panel.rs  dialogs.rs  dialogs_dir_mappings.rs  dialogs_dir_settings.rs  dialogs_global_settings.rs  grids.rs  left_panel.rs  log_panel.rs  main.rs  panels.rs  reports.rs  right_panel.rs  startup_ui.rs  status_bar.rs  toolbar.rs  top_menu.rs  tree.rs  tree_presets.rs  utils.rs
crates/romvault_ui/src/app_sam/: worker.rs
crates/romvault_ui/src/dialogs/: about.rs  color_key.rs  rom_info.rs  sam.rs  sam_types.rs
crates/romvault_ui/src/grids/: app_impl.rs  clipboard.rs  sorting.rs
crates/romvault_ui/src/grids/app_impl/: full.rs  game_grid.rs  rom_grid.rs
crates/romvault_ui/src/tests/: dialogs_tests.rs  grids_tests.rs  main_tests.rs  reports_tests.rs  tree_presets_tests.rs  tree_tests.rs
crates/romvault_ui/src/tree/: app_impl.rs
crates/romvault_ui/src/tree/app_impl/: draw_row.rs  helpers.rs  rows_cache.rs  selection.rs  stats_queue.rs
crates/rv_core/: Cargo.toml  build.rs
crates/rv_core/src/: arr_byte.rs  byte_sorted_list.rs  cache.rs  chd.rs  clean_partial.rs  compare.rs  db.rs  db_helper.rs  db_type_get.rs  enums.rs  external_dat_converter_to.rs  fast_array_sort.rs  file_scanning.rs  find_fixes.rs  find_fixes_impl.rs  fix.rs  fix_dat_report.rs  hash_keys.rs  is_file_only.rs  lib.rs  mia_callback.rs  patterns.rs  read_dat.rs  relative_path.rs  repair_status.rs  report_error.rs  rv_dat.rs  rv_file.rs  rv_game.rs  scanned_file.rs  scanner.rs  settings.rs  task_reporter.rs  ulong_utils.rs
crates/rv_core/src/file_scanning/: impl.rs
crates/rv_core/src/find_fixes/: apply.rs  matching.rs  physical_paths.rs  physical_scan.rs  selection.rs  shared_paths.rs
crates/rv_core/src/fix/: actions.rs  engine.rs  rebuild_common.rs  rebuild_sevenzip.rs  rebuild_zip.rs  zip_ops.rs
crates/rv_core/src/read_dat/: impl.rs  mapping.rs  path_utils.rs  scan.rs  state.rs  update.rs
crates/rv_core/src/rv_file/: impl.rs  ordering.rs  status_reset.rs
crates/rv_core/src/scanner/: archive.rs  directory.rs  raw.rs
crates/rv_core/src/settings/: impl.rs
crates/rv_core/src/tests/: cache_tests.rs  compare_tests.rs  db_tests.rs  enums_tests.rs  external_dat_converter_to_tests.rs  file_scanning_tests.rs  find_fixes_tests.rs  fix_dat_report_tests.rs  fix_tests.rs  read_dat_tests.rs  repair_status_tests.rs  rv_file_tests.rs  rv_game_tests.rs  scanned_file_tests.rs  scanner_tests.rs  settings_tests.rs
crates/trrntzip/: Cargo.toml
crates/trrntzip/src/: lib.rs  process_control.rs  process_zip.rs  torrent_zip.rs  torrent_zip_check.rs  torrent_zip_make.rs  torrent_zip_rebuild.rs  trrntzip_status.rs  zipped_file.rs
crates/trrntzip/src/tests/: torrent_zip_check_tests.rs  torrent_zip_rebuild_tests.rs
crates/trrntzip/src/torrent_zip_rebuild/: control.rs  impl.rs  raw_torrentzip.rs
(+55 files in other folders)
