[workspace]
members = [
    "crates/dat_reader",
    "crates/compress",
    "crates/rv_core",
    "crates/rom_vault",
    "crates/rv_io",
    "crates/trrntzip",
    "crates/trrntzip_cmd",
    "crates/file_header_reader",
    "crates/dir2dat",
    "crates/romvault_ui"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["RustyRoms Contributors"]

[patch.crates-io]
sevenz-rust2 = { path = "vendor/sevenz-rust2" }
