[package]
name = "rom_vault"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
rv_core = { path = "../rv_core" }
dat_reader = { path = "../dat_reader" }
compress = { path = "../compress" }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

