[package]
name = "romvault_ui"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
eframe = "0.27"
egui = "0.27"
egui_extras = { version = "0.27", features = ["image", "svg"] }
rv_core = { path = "../rv_core" }
dat_reader = { path = "../dat_reader" }
hex = "0.4.3"
serde_json = "1.0"
zip = "0.6.6"
image = { version = "0.25", default-features = false, features = ["png"] }
