[package]
name = "rv_core"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
dat_reader = { path = "../dat_reader" }
compress = { path = "../compress" }
bitflags = { version = "2.4", features = ["serde"] }
md-5 = "0.10"
sha1 = "0.10"
crc32fast = "1.3"
chrono = "0.4"
byteorder = "1.5.0"
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive", "rc"] }
rayon = "1.11.0"
memmap2 = "0.9"
quick-xml = { version = "0.39.2", features = ["serialize"] }
zip = "8.4.0"
tracing = "0.1.44"
trrntzip = { path = "../trrntzip" }
sevenz-rust = { package = "sevenz-rust2", version = "0.19.3", features = ["compress", "zstd"] }
flate2 = "1.0"
libc = "0.2"
file_header_reader = { path = "../file_header_reader" }

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tempfile = "3.10.1"
