[package]
name = "trrntzip"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
compress = { path = "../compress" }
bitflags = "2.4"
crc32fast = "1.3"
flate2 = "1.0"
sevenz-rust = { package = "sevenz-rust2", version = "0.19.3", features = ["compress", "zstd"] }

[dev-dependencies]
tempfile = "3.10.1"
zip = "0.6"
